Mesh sequence cache - crash to desktop with clicking at panel tabs #94387

Closed
opened 2021-12-26 11:52:24 +01:00 by Reiner Prokein · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-25 21:08, hash: dd3a72f275

Short description of error
Mesh Sequence cache. When there is no alembic cache loaded, and you click at the Time, Render Procedural or Velocity panel tab, then Blender crashes to desktop.

Exact steps for others to reproduce the error

  • Open Blender
  • Add Mesh Sequence cache modifier
  • Click at Time tab
  • Crash

The same panels for the Transform cache constraint does not crash. But does not show any content.

Related task: https://developer.blender.org/D13652

2021-12-26 11-43-35.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-25 21:08, hash: `dd3a72f275` **Short description of error** Mesh Sequence cache. When there is no alembic cache loaded, and you click at the Time, Render Procedural or Velocity panel tab, then Blender crashes to desktop. **Exact steps for others to reproduce the error** - Open Blender - Add Mesh Sequence cache modifier - Click at Time tab - Crash The same panels for the Transform cache constraint does not crash. But does not show any content. Related task: https://developer.blender.org/D13652 [2021-12-26 11-43-35.mp4](https://archive.blender.org/developer/F12776463/2021-12-26_11-43-35.mp4)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Member

Hi, thanks for report. Can confirm the crash on current master (dd3a72f275)

@kevindietrich can you look at this?
Not bisected yet but looks like your commit caused the crash (as said by Reiner): 43f5e761a6


stack trace:

blender.exe         :0x00007FF764DFD580  RNA_struct_find_property C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\makesrna\intern\rna_access.c:743
blender.exe         :0x00007FF764B46BF0  uiItemR C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_layout.c:2452
blender.exe         :0x00007FF764B6D500  uiTemplateCacheFileTimeSettings C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_templates.c:6463
blender.exe         :0x00007FF764D7F1F0  time_panel_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_meshsequencecache.c:365
blender.exe         :0x00007FF76489BF20  ed_panel_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:2801
blender.exe         :0x00007FF76489BF20  ed_panel_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:2814
blender.exe         :0x00007FF76489A2C0  ED_region_panels_layout_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:3010
blender.exe         :0x00007FF765478460  buttons_main_region_layout C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_buttons\space_buttons.c:515
blender.exe         :0x00007FF7648990E0  ED_region_do_layout C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:526
blender.exe         :0x00007FF76487F0B0  wm_draw_window_offscreen C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:682
blender.exe         :0x00007FF76487EF00  wm_draw_window C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:884
blender.exe         :0x00007FF76487EA40  wm_draw_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1083
blender.exe         :0x00007FF764859800  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:646
blender.exe         :0x00007FF764854FF0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:566
blender.exe         :0x00007FF765679088  __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF971287020  BaseThreadInitThunk
ntdll.dll           :0x00007FF9717C2630  RtlUserThreadStart```
Hi, thanks for report. Can confirm the crash on current master (`dd3a72f275`) @kevindietrich can you look at this? Not bisected yet but looks like your commit caused the crash (as said by Reiner): 43f5e761a6 --- stack trace: ```lines blender.exe :0x00007FF764DFD580 RNA_struct_find_property C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\makesrna\intern\rna_access.c:743 blender.exe :0x00007FF764B46BF0 uiItemR C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_layout.c:2452 blender.exe :0x00007FF764B6D500 uiTemplateCacheFileTimeSettings C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_templates.c:6463 blender.exe :0x00007FF764D7F1F0 time_panel_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_meshsequencecache.c:365 blender.exe :0x00007FF76489BF20 ed_panel_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:2801 blender.exe :0x00007FF76489BF20 ed_panel_draw C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:2814 blender.exe :0x00007FF76489A2C0 ED_region_panels_layout_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:3010 blender.exe :0x00007FF765478460 buttons_main_region_layout C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_buttons\space_buttons.c:515 blender.exe :0x00007FF7648990E0 ED_region_do_layout C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:526 blender.exe :0x00007FF76487F0B0 wm_draw_window_offscreen C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:682 blender.exe :0x00007FF76487EF00 wm_draw_window C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:884 blender.exe :0x00007FF76487EA40 wm_draw_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1083 blender.exe :0x00007FF764859800 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:646 blender.exe :0x00007FF764854FF0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:566 blender.exe :0x00007FF765679088 __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF971287020 BaseThreadInitThunk ntdll.dll :0x00007FF9717C2630 RtlUserThreadStart```

This issue was referenced by 28a8d434d5

This issue was referenced by 28a8d434d53126c09ee795c5b8af129e3fc7521a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2021-12-26 13:46:58 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94387
No description provided.