source/blender/modifiers/intern/MOD_meshsequencecache.c
@@ -343,6 +343,10 @@ static void velocity_panel_draw(const bContext *UNUSED(C), Panel *panel)
     return;
   }
 
+  if (RNA_pointer_is_null(&fileptr)) {
+    return;
+  }
+
   uiLayoutSetPropSep(layout, true);
   uiTemplateCacheFileVelocity(layout, &fileptr);
   uiItemR(layout, ptr, "velocity_scale", 0, NULL, ICON_NONE);
@@ -360,6 +364,10 @@ static void time_panel_draw(const bContext *UNUSED(C), Panel *panel)
     return;
   }
 
+  if (RNA_pointer_is_null(&fileptr)) {
+    return;
+  }
+
   uiLayoutSetPropSep(layout, true);
   uiTemplateCacheFileTimeSettings(layout, &fileptr);
 }
@@ -373,6 +381,10 @@ static void render_procedural_panel_draw(const bContext *C, Panel *panel)
 
   PointerRNA fileptr;
   if (!uiTemplateCacheFilePointer(ptr, "cache_file", &fileptr)) {
+    return;
+  }
+
+  if (RNA_pointer_is_null(&fileptr)) {
     return;
   }
 
